--- a/css/index.css
+++ b/css/index.css
@@ -62,11 +62,22 @@ button:hover {
 
 #topDiv {
     color: white;
-    width: calc(64% - 20px) !important;
+    width: calc(300px) !important;
     height: 50px;
     position: fixed;
     top: calc(2%);
-    left: 18%;
+    left: 2%;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#sideDiv {
+    color: white;
+    width: calc(300px) !important;
+    height: calc(96% - 230px);
+    position: fixed;
+    top: calc(2% + 80px);
+    left: 2%;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.5);
 }
