--- a/css/index.css
+++ b/css/index.css
@@ -49,9 +49,8 @@ input[type='file'] {
 }
 
 button {
-    border-radius: 2px;
-    border-width: 2px;
-    background-color:rgb(255, 255, 255)
+    border-radius: 0px;
+    border-width: 0px;
 }
 
 button:hover {
@@ -62,22 +61,11 @@ button:hover {
 
 #topDiv {
     color: white;
-    width: calc(300px) !important;
+    width: calc(64% - 20px) !important;
     height: 50px;
     position: fixed;
     top: calc(2%);
-    left: 2%;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-#sideDiv {
-    color: white;
-    width: calc(300px) !important;
-    height: calc(96% - 230px);
-    position: fixed;
-    top: calc(2% + 80px);
-    left: 2%;
+    left: 18%;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.5);
 }
@@ -87,56 +75,49 @@ button:hover {
     position: fixed;
     text-align: center;
     bottom: 2%;
-    left: 2%;
-    width: calc(96% - 20px);
+    left: 10%;
+    width: calc(80% - 20px);
     height: 100px;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-#Update-div {
-    padding: 10px;
-}
-
-#Update-div > * {
-    width: calc(20%);
-    height: 20px;
-}
-
-/* https://codingartistweb.com/2021/06/double-range-slider-html-css-javascript/*/
-
 input[type="range"]{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 95%;
-    left: 2.5%;
+    width: 100%;
     outline: none;
     position: absolute;
     margin: auto;
-    top: 50%;
+    top: 0;
     bottom: 0;
     background-color: transparent;
     pointer-events: none;
 }
 
-#sliderBar-div {
-    width: 95%;
-    left: 2.5%;
+.slider-track{
+    width: 100%;
     height: 5px;
     position: absolute;
     margin: auto;
-    top: 50%;
+    top: 0;
     bottom: 0;
     border-radius: 5px;
-    background-color: #ffffff;
 }
 
 input[type="range"]::-webkit-slider-runnable-track{
     -webkit-appearance: none;
     height: 5px;
 }
-
+input[type="range"]::-moz-range-track{
+    -moz-appearance: none;
+    height: 5px;
+}
+input[type="range"]::-ms-track{
+    appearance: none;
+    height: 5px;
+}
 input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
     height: 1.7em;
@@ -147,7 +128,24 @@ input[type="range"]::-webkit-slider-thumb{
     pointer-events: auto;
     border-radius: 50%;
 }
-
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #3264fe;
+    pointer-events: auto;
+}
+input[type="range"]::-ms-thumb{
+    appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #3264fe;
+    pointer-events: auto;
+}
 input[type="range"]:active::-webkit-slider-thumb{
     background-color: #ffffff;
     border: 3px solid #3264fe;
